--- a/wwwroot/assets/css/profile.css
+++ b/wwwroot/assets/css/profile.css
@@ -6,6 +6,59 @@
     overflow: hidden;
 }
 
+/* Page Title - Change color to white */
+.page-title {
+    color: white !important;
+    font-weight: 700 !important;
+    font-size: 80px !important;
+    position: relative !important;
+    text-align: center !important;
+    text-transform: uppercase !important;
+    z-index: 2 !important;
+}
+
+@media only screen and (max-width: 1599px) {
+    .page-title {
+        font-size: 70px !important;
+    }
+}
+
+@media only screen and (max-width: 1299px) {
+    .page-title {
+        font-size: 60px !important;
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .page-title {
+        font-size: 50px !important;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .page-title {
+        font-size: 40px !important;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .page-title {
+        font-size: 35px !important;
+    }
+}
+
+@media only screen and (max-width: 479px) {
+    .page-title {
+        font-size: 30px !important;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .page-title {
+        font-size: 25px !important;
+    }
+}
+
 .menu-header {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     color: white;
