--- a/Views/client/Tour-list.cshtml
+++ b/Views/client/Tour-list.cshtml
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="/assets/css/jquery-ui.min.css">
 
     <!-- Additional CSS for Tour List (not in shared) -->
-    <link rel="stylesheet" href="/assets/css/flaticon.min.css">
-    <link rel="stylesheet" href="/assets/css/fontawesome-5.14.0.min.css">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/magnific-popup.min.css">
-    <link rel="stylesheet" href="/assets/css/nice-select.min.css">
-    <link rel="stylesheet" href="/assets/css/aos.css">
-    <link rel="stylesheet" href="/assets/css/slick.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/flaticon.min.css")" asp-append-version="true" />
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/fontawesome-5.14.0.min.css")" asp-append-version="true" />
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/bootstrap.min.css")" asp-append-version="true" />
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/magnific-popup.min.css")" asp-append-version="true" />
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/nice-select.min.css")" asp-append-version="true" />
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/aos.css")" asp-append-version="true" />
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/slick.min.css")" asp-append-version="true" />
+    <link rel="stylesheet" href="@Url.Content("~/assets/css/style.css")" asp-append-version="true" />
 
     <style>
         .heart {
